- 12: Enh. #62: Arranger may now save arrangements in a portable way <Kay Gürtzig>
- 12: Arranger: Partial language support (EN/DE/ES) introduced <Kay Gürtzig>
- 13: Enh. #188: Instruction transmutation, concatenation and spliting <Kay Gürtzig>
- 13: Enh. #185: Call identification on Pascal import improved <Kay Gürtzig>

Version: 3.24 (2016.03.14)
- 01: Bugfix #50 - added return types to signature for function export in Pascal [lhoreman]
- 02: Bugfix #51 - stand-alone input/output keywords were not converted on export [IrisLuc]
- 03: Bugfix #48 - instant delay propagation to Turtleizer <Kay Gürtzig>
- 03: Bugfix #49 - failing equality detection among variables (also array elements) <Kay Gürtzig>
- 04: Enh. #36 - allowing to pause from input and output dialogs <Kay Gürtzig>
- 04: Enh. #54 - Output instruction with expression list (executor, most generators) <Kay Gürtzig>
- 04: Bugfix #55 - highlighting of variables with keywords as substring mended <Kay Gürtzig>
- 04: Bugfix #57 - Risk of endless loops and other flaws on Perl export <Kay Gürtzig>
- 04: Bugfix #59 - For loop export to Python was defective <Kay Gürtzig>
- 05: executor: Enh. #9 - Subroutine call now supported via Arranger as pool <Kay Gürtzig>
- 05: executor: Enh. #9 - Control panel shows call depth and (on error) stacktrace <Kay Gürtzig>
- 05: executor: Enh. #23 - Jump execution implemented in three categories <Kay Gürtzig>
- 05: arranger: Enh. #9 - Structorizer can now push diagrams into Arranger <Kay Gürtzig>
- 05: arranger: Enh. #35 - Arranger now got scrollbars and moves to a just added diagram <Kay Gürtzig>
- 05: arranger: Enh. #35 - Diagrams may be pinned (against replacement) and dropped <Kay Gürtzig>
- 05: generator: Enh. #23 - Export to C, C++, C#, Java, and Pascal now supports Jumps <Kay Gürtzig>
- 05: analyser: New checks for calls, jumps, return mechanisms and concurrency risks <Kay Gürtzig>
- 05: analyser: Analyser hadn't checked within Forever loops and Parallel sections <Kay Gürtzig>